tests/NormalTests/paczka1/fuzzy1/70945541.err
Error in line 1: 2YgV1xS A353 8,5
Error in line 2: 2YgV1xS A695 15,5
Error in line 8: A859 A695 80,9
Error in line 18: YIfiau9ThI A353 92,4
Error in line 23: w2EGwTf4 A75~ 72,0
Error in line 15: 2YgV1xS A859 96,9
Error in line 28: hxTmP5IYci A695 5,6
Error in line 19: YIfiau9ThI A859 56,5
